error_msgs.txt
  File "programs/python/toy_programs/output_programs/errors/ArmstrongNumber_0_error.py", line 1
    Line no. 3 :  Unknown . found.
          ^
SyntaxError: invalid syntax
